--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.14.0",
     "tronweb": "^5.3.0"
   },
   "devDependencies": {
