--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "telegraf": "^4.14.0",
-    "tronweb": "^5.3.0"
+    "tronweb": "^5.3.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
