--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "grammy": "^1.19.2",
+    "grammy-scenes": "^10.2.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.14.0",
     "tronweb": "^5.3.0",
     "typeorm": "^0.3.17"
   },
