--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "grammy": "^1.19.2",
+    "grammy-guard": "^0.5.0",
     "grammy-scenes": "^10.2.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
