--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:dev": "docker compose -f docker-compose.dev.yml --env-file .env.dev up --build",
+    "docker:prod": "docker compose -f docker-compose.dev.yml --env-file .env.prod up --build"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
