--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@telegraf/session": "^2.0.0-beta.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "nestjs-telegraf": "^2.7.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "telegraf": "^4.15.0",
